--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 </svg>
             </button>
             </div>
+
         </section>
 
         <!-- Переваги -->
@@ -115,15 +116,15 @@
             <div class="container">
                 <h2 class="promo-title">Чим ми займаємося</h2>
                 <ul class="promo-list list">
-                    <li class="promo-modal">
+                    <li class="promo-card">
                         <img src="./images/box-1.jpg" alt="працюють на ПК" width="370">
                     <p class="promo-text">Десктопні додатки</p>
                     </li>
-                    <li class="promo-modal">
+                    <li class="promo-card">
                         <img src="./images/box-2.jpg" alt="працюють на ноутбуці з телефоном" width="370">
                     <p class="promo-text">Мобільні додатки</p>
                     </li>
-                    <li class="promo-modal">
+                    <li class="promo-card">
                         <img src="./images/box-3.jpg" alt="працюють за планшетом" width="370">
                     <p class="promo-text">Дизайнерські рішення</p>
                     </li>
@@ -340,6 +341,7 @@
                     </ul>
         </div>
     </footer>
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
