--- a/portfolio.html
+++ b/portfolio.html
@@ -61,85 +61,130 @@
                 <ul class="preview-list list">
                     <li class="preview-wrap">
                         <a href="#" class="preview-link link">
-                            <img src="./images/example-1.jpg" alt="Технокряк">
-                            <div class="title-text-wrap">
+                            <div class="preview-thumb">
+                            <img src="./images/example-1.jpg" alt="Технокряк" >
+                             <p class="preview-subtext"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості 
+                                про компанію чи приватну особу.</p>
+                           </div>
+                                <div class="title-text-wrap">
                                 <h2 class="preview-title">Технокряк</h2>
                                 <p class="preview-text">Веб-сайт</p>
-                            </div>
+                            </div> 
                         </a>
                     </li>
-
-                    <li class="preview-wrap">
+                    <li >
                         <a href="#" class="preview-link link">
-                            <img src="./images/example-2.jpg" alt="Постер New Orlean vs Golden Star">
+                            <div class="preview-thumb">
+                                <img src="./images/example-2.jpg" alt="Постер New Orlean vs Golden Star" >
+                                 <p class="preview-subtext"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                    та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості 
+                                    про компанію чи приватну особу.</p>
+                               </div>                    
                             <div class="title-text-wrap">
                                 <h2 class="preview-title">Постер New Orlean vs Golden Star</h2>
                                 <p class="preview-text">Дизайн</p>
                             </div>
                         </a>
                     </li>
-                    <li class="preview-wrap">
+                    <li>
                         <a href="#" class="preview-link link">
-                            <img src="./images/example-3.jpg" alt="Ресторан Seafood">
+                            <div class="preview-thumb">
+                            <img src="./images/example-3.jpg" alt="Ресторан Seafood" >
+                             <p class="preview-subtext"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості 
+                                про компанію чи приватну особу.</p>
+                           </div>
                             <div class="title-text-wrap">
                                 <h2 class="preview-title">Ресторан Seafood</h2>
                                 <p class="preview-text">Додаток</p>
                             </div>
+                        
                         </a>
                     </li>
-                    <li class="preview-wrap">
+                    <li>
                         <a href="#" class="preview-link link">
-                            <img src="./images/example-4.jpg" alt="Проєкт Prime">
+                            <div class="preview-thumb">
+                            <img src="./images/example-4.jpg" alt="Проєкт Prime" >
+                             <p class="preview-subtext"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості 
+                                про компанію чи приватну особу.</p>
+                           </div>
                             <div class="title-text-wrap">
                                 <h2 class="preview-title">Проєкт Prime</h2>
                                 <p class="preview-text">Маркетинг</p>
                             </div>
                         </a>
                     </li>
-                    <li class="preview-wrap">
+                    <li>
                         <a href="#" class="preview-link link">
-                            <img src="./images/example-5.jpg" alt="Проєкт Boxes">
+                            <div class="preview-thumb">
+                            <img src="./images/example-5.jpg" alt="Проєкт Boxes" >
+                             <p class="preview-subtext"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості 
+                                про компанію чи приватну особу.</p>
+                           </div>
                             <div class="title-text-wrap">
                                 <h2 class="preview-title">Проєкт Boxes</h2>
                                 <p class="preview-text">Додаток</p>
-                            </div>
-                        </a>
+                            </div>                          
+                            </a>
                     </li>
-                    <li class="preview-wrap">
+                    <li>
                         <a href="#" class="preview-link link">
-                            <img src="./images/example-6.jpg" alt="Inspiration has no Borders">
+                            <div class="preview-thumb">
+                            <img src="./images/example-6.jpg" lang="en" alt="Inspiration has no Borders" >
+                             <p class="preview-subtext"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості 
+                                про компанію чи приватну особу.</p>
+                           </div>
                             <div class="title-text-wrap">
                                 <h2 class="preview-title" lang="en">Inspiration has no Borders</h2>
                                 <p class="preview-text">Веб-сайт</p>
-                            </div>
-                        </a>
+                            </div>                      
+                            </a>
                     </li>
-                    <li class="preview-wrap">
+                    <li>
                         <a href="#" class="preview-link link">
-                            <img src="./images/example-7.jpg" alt="Видання Limited Edition">
+                            <div class="preview-thumb">
+                            <img src="./images/example-7.jpg" alt="Видання Limited Edition" >
+                             <p class="preview-subtext"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості 
+                                про компанію чи приватну особу.</p>
+                           </div>
                             <div class="title-text-wrap">
                                 <h2 class="preview-title">Видання Limited Edition</h2>
                                 <p class="preview-text">Дизайн</p>
-                            </div>
-                        </a>
+                            </div>                          
+                            </a>
                     </li>
-                    <li class="preview-wrap">
+                    <li>
                         <a href="#" class="preview-link link">
+                            <div class="preview-thumb">
                             <img src="./images/example-8.jpg" alt="Проєкт LAB">
+                            <p class="preview-subtext"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості 
+                                про компанію чи приватну особу.</p>
+                                     </div>                  
                             <div class="title-text-wrap">
                                 <h2 class="preview-title">Проєкт LAB</h2>
                                 <p class="preview-text">Маркетинг</p>
-                            </div>
-                        </a>
+                            </div>                             
+                            </a>
                     </li>
-                    <li class="preview-wrap">
+                    <li>
                         <a href="#" class="preview-link link">
-                            <img src="./images/example-9.jpg" alt="Growing Business">
+                            <div class="preview-thumb">
+                                <img src="./images/example-9.jpg" alt="Ресторан Seafood">
+                                <p class="preview-subtext"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                    та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості 
+                                    про компанію чи приватну особу.</p>
+                                </div>   
                             <div class="title-text-wrap">
                                 <h2 class="preview-title" lang="en">Growing Business</h2>
                                 <p class="preview-text">Додаток</p>
-                            </div>
-                        </a>
+                            </div>                         
+                            </a>
                     </li>
                 </ul>
             </div>
