--- a/portfolio.html
+++ b/portfolio.html
@@ -194,7 +194,7 @@
     <footer>
         <div class="container">
            <div class="footer-wrap">
-                    <a class="logo" ref="./index.html"><span class="logo-span">Web</span>Studio</a>
+                    <a class="logo" href="./index.html"><span class="logo-span">Web</span>Studio</a>
                     <address>
                         <ul class="footer-list list">
                             <li> <a class="address" href="https://goo.gl/maps/M5fKYAZPapUJa6bE6" target="_blank"
